syntax = "proto3";

package testing.spring.grpc;
option java_package = "testing.spring.grpc";

service TestService {
    rpc Hello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
